*** 20001221_2 by lusky
added IP to I-line is full notice (pro)
fixed rehash help (wc)
updated opers.txt (wc)



*** 20001221_1 by lusky
fixed a compile warning on solaris


*** 20001201_1 by lusky
added Gline Exemption flag ('_') to Ilines


*** 20001126_1 by lusky
hide baninfo for hide_ops (db)
misc documentation cleanups (wc)
changed SendWallops and SendServNotice macros to check IsAnOper


*** 20001125_1 by lusky
fix to m_links (db)


*** 20001124_4 by lusky
updated defaults for new stuff in config.h


*** 20001124_3 by lusky
oper privs 'K' fix (wc)
missing RPL_ENDOFTRACE's in m_ltrace (wc)
remove LOCAL_KILL_ONLY remnant (wc)
updated m_info.h with new config options


*** 20001124_2 by lusky
added a bunch of casts to fix signedness warnings with irix compiler and
  with gcc -Wall -pedantic


*** 20001124_1 by lusky
fixed IPQuadTab corruption issue [werd!@#@!#!@] (db/pvr)
added hide_ops (db)


*** 20001122_1 by lusky
fixed the m_userhost fix


*** 20001121_1 by lusky
revved patchlevel to rc7
redundant if in server_estab() (gp)
ported SERVERHIDE from +ins patch (ejb/jrl)
disabled hunting by nick or wildcard for local nonopers with SERVERHIDE


*** 20001118_1 by lusky
changed a bunch of debugging sendto_ops to sendto_realops
first fix for bogus hostnames from other ircds


*** 20001110_1 by lusky
updated rehash help message
parser fix
make ADMIN non-hunting for unregistered connections


*** 20001108_2 by lusky
don't allow VERSION from unregistered clients


*** 20001108_1 by lusky
removed bogus C++ comment (cab)
added CIDR documentation
fixed a cast in s_zip.c (cab)


*** 20001101_1 by lusky
disallow DNS command from non-opers
format string snafu in ts_warn()
format string snafu in debug()


*** 20001029_2 by lusky
revved patchlevel for rc6
added O_LINES_OPER_ONLY


*** 20001029_1 by lusky
fix for mIRC NAT+spoofedI DCC send problem (userhost now returns sockhost
for acptr==sptr).


*** 20001025_1 by lusky
fix path in viconf (ab)


*** 20001024_1 by lusky